--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Python Weather Analysis</title>
+        <title>Web Scraping Challenge</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        <link rel="stylesheet" href="../static/bootstrap.min.css">
+        <link rel="stylesheet" href="static/bootstrap.min.css">
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
         <!-- <script src="https://code.jquery.com/jquery-3.6.0.js"></script> -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 
         
     </head>
@@ -29,7 +30,7 @@
 
         <nav class="navbar navbar-expand-md navbar-dark bg-primary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/"><h3><strong>Web Scraping Challenge</strong></h3></a>
+              <a class="navbar-brand" href="/"><h3><strong>Mission to Mars</strong></h3></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" 
               aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -49,7 +50,7 @@
                   </li>
       
                   <li class="nav-item px-3">
-                    <a class="nav-link" href="/scrape"><i class="bi bi-tools"></i>&nbsp;&nbsp;&nbsp;Scrape</a>
+                    <a class="btn btn-info" href="/scrape"><i class="bi bi-tools"></i>&nbsp;&nbsp;&nbsp;Scrape New Data</a>
                   </li>
       
                   
@@ -64,7 +65,7 @@
           </nav>
 <!-- end navigation bar -->
 
-        <h1 class="text-info text-center">Mars Info</h1>
+        <h1 class="text-info text-center py-3">Mars Info<hr/></h1>
         <div class="container">
             <div class="row">
                 
